--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   <section id="title">
 
     <div class="container-fluid">
-      <nav class="navbar navbar-expand-md bg-">
 
+      <nav class="navbar navbar-expand-md navbar-dark bg-">
         <!-- Top section: Brand + Nav Bar -->
-        <a class="navbar-brand" href="#">
-          <img class="d-inline-block align-top brand-img" src="images/brand-img.png" width="70" height="70" alt="sheldonartory-img" loading="lazy">
+        <a class="navbar-brand">
+          <!-- <img class="d-inline-block align-top brand-img" src="images/brand-img.png" width="70" height="70" alt="sheldonartory-img" loading="lazy"> -->
           <span class="brand-h1">Sheldonartory</span>
         </a>
 
@@ -66,26 +66,31 @@
   <!-- Carousel Section -->
   <section id="carousel">
     <div id="reviews-carousel" class="carousel slide" data-ride="false" data-pause="hover">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="xmas-offer" src="images/xmas-offer.png" alt="xmas-offer">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="xmas-offer" src="images/xmas-offer.png" alt="xmas-offer">
+        </div>
+        <div class="carousel-item">
+          <img class="xmas-stickers" src="images/xmas-stickers.png" alt="xmas-stickers">        
+          </div>
+        <div class="carousel-item">
+          <img class="animal-students" src="images/animal-students.png" alt="animal-students">
+        </div>
       </div>
-      <div class="carousel-item">
-        <img class="xmas-stickers" src="images/xmas-stickers.png" alt="xmas-stickers">
-      </div>
-      <div class="carousel-item">
-        <img class="animal-students" src="images/animal-students.png" alt="animal-students">
-      </div>
+      <a class="carousel-control-prev" href="#reviews-carousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#reviews-carousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-    <a class="carousel-control-prev" href="#reviews-carousel" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#reviews-carousel" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
   </section>
 
   <!-- New Products Section -->
