--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="container-fluid">
 
-      <nav class="navbar navbar-expand-md navbar-dark bg-">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-">
         <!-- Top section: Brand + Nav Bar -->
         <a class="navbar-brand">
           <!-- <img class="d-inline-block align-top brand-img" src="images/brand-img.png" width="70" height="70" alt="sheldonartory-img" loading="lazy"> -->
