--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="container-fluid">
 
-      <nav class="navbar navbar-expand-lg navbar-dark bg-">
+      <nav class="navbar navbar-expand-md navbar-dark bg-">
         <!-- Top section: Brand + Nav Bar -->
         <a class="navbar-brand">
           <!-- <img class="d-inline-block align-top brand-img" src="images/brand-img.png" width="70" height="70" alt="sheldonartory-img" loading="lazy"> -->
@@ -76,8 +76,8 @@
           <img class="xmas-offer" src="images/xmas-offer.png" alt="xmas-offer">
         </div>
         <div class="carousel-item">
-          <img class="xmas-stickers" src="images/xmas-stickers.png" alt="xmas-stickers">        
-          </div>
+          <img class="xmas-stickers" src="images/xmas-stickers.png" alt="xmas-stickers">
+        </div>
         <div class="carousel-item">
           <img class="animal-students" src="images/animal-students.png" alt="animal-students">
         </div>
